added update employee status

--- a/Process.xaml
+++ b/Process.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1196,1875</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1196,2036</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessTransaction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -36,7 +36,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="50">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="26">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -65,13 +65,14 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="463,1710" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="463,1871" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="infraCandidates" />
       <Variable x:TypeArguments="sd:DataTable" Name="devCandidates" />
       <Variable x:TypeArguments="sd:DataTable" Name="baCandidates" />
       <Variable x:TypeArguments="sd:DataTable" Name="saCandidates" />
       <Variable x:TypeArguments="scg:List(x:String)" Name="partnersIdList" />
+      <Variable x:TypeArguments="ui:DatabaseConnection" Name="dbConnection" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -80,14 +81,30 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:Comment DisplayName="Comment (placeholder)" sap:VirtualizedContainerService.HintSize="421,55" sap2010:WorkflowViewState.IdRef="Comment_1" Text="//  Invoke steps of the process" />
+    <ui:DatabaseConnect DatabaseConnection="[dbConnection]" DisplayName="Connect" sap:VirtualizedContainerService.HintSize="421,59" sap2010:WorkflowViewState.IdRef="DatabaseConnect_1" ProviderName="System.Data.SqlClient" ConnectionString="[in_Config(&quot;dbConnection&quot;).ToString]" />
     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke GetNewCandidates workflow" sap:VirtualizedContainerService.HintSize="421,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Workflows\GetNewCandidates.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_infraDt">[infraCandidates]</OutArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_rpaDevDt">[devCandidates]</OutArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_baDt">[baCandidates]</OutArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_saDt">[saCandidates]</OutArgument>
-        <OutArgument x:TypeArguments="scg:List(x:String)" x:Key="out_partnerIds">[partnersIdList]</OutArgument>
+        <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+          <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+        </InArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_infraDt">
+          <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="infraCandidates" />
+        </OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_rpaDevDt">
+          <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="devCandidates" />
+        </OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_baDt">
+          <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="baCandidates" />
+        </OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_saDt">
+          <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="saCandidates" />
+        </OutArgument>
+        <OutArgument x:TypeArguments="scg:List(x:String)" x:Key="out_partnerIds">
+          <mva:VisualBasicReference x:TypeArguments="scg:List(x:String)" ExpressionText="partnersIdList" />
+        </OutArgument>
+        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+          <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="dbConnection" />
+        </InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <Sequence DisplayName="AddnewCandidatesinDBSendHackerranktest" sap:VirtualizedContainerService.HintSize="421,560" sap2010:WorkflowViewState.IdRef="Sequence_2">
@@ -99,30 +116,66 @@
       </sap:WorkflowViewStateService.ViewState>
       <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="DEV" sap:VirtualizedContainerService.HintSize="379,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Workflows/AddnewCandidatesinDBSendHackerranktest.xaml">
         <ui:InvokeWorkflowFile.Arguments>
-          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">4</InArgument>
-          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">[devCandidates]</InArgument>
+          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+            <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+          </InArgument>
+          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">
+            <Literal x:TypeArguments="x:Int32" Value="4" />
+          </InArgument>
+          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">
+            <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="devCandidates" />
+          </InArgument>
+          <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+            <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="dbConnection" />
+          </InArgument>
         </ui:InvokeWorkflowFile.Arguments>
       </ui:InvokeWorkflowFile>
       <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="INFRA" sap:VirtualizedContainerService.HintSize="379,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_8" UnSafe="False" WorkflowFileName="Workflows/AddnewCandidatesinDBSendHackerranktest.xaml">
         <ui:InvokeWorkflowFile.Arguments>
-          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">7</InArgument>
-          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">[infraCandidates]</InArgument>
+          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+            <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+          </InArgument>
+          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">
+            <Literal x:TypeArguments="x:Int32" Value="7" />
+          </InArgument>
+          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">
+            <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="infraCandidates" />
+          </InArgument>
+          <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+            <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="dbConnection" />
+          </InArgument>
         </ui:InvokeWorkflowFile.Arguments>
       </ui:InvokeWorkflowFile>
       <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="SA" sap:VirtualizedContainerService.HintSize="379,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_9" UnSafe="False" WorkflowFileName="Workflows/AddnewCandidatesinDBSendHackerranktest.xaml">
         <ui:InvokeWorkflowFile.Arguments>
-          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">5</InArgument>
-          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">[saCandidates]</InArgument>
+          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+            <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+          </InArgument>
+          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">
+            <Literal x:TypeArguments="x:Int32" Value="5" />
+          </InArgument>
+          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">
+            <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="saCandidates" />
+          </InArgument>
+          <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+            <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="dbConnection" />
+          </InArgument>
         </ui:InvokeWorkflowFile.Arguments>
       </ui:InvokeWorkflowFile>
       <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="BA" sap:VirtualizedContainerService.HintSize="379,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_10" UnSafe="False" WorkflowFileName="Workflows/AddnewCandidatesinDBSendHackerranktest.xaml">
         <ui:InvokeWorkflowFile.Arguments>
-          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">6</InArgument>
-          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">[baCandidates]</InArgument>
+          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+            <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+          </InArgument>
+          <InArgument x:TypeArguments="x:Int32" x:Key="in_Position">
+            <Literal x:TypeArguments="x:Int32" Value="6" />
+          </InArgument>
+          <InArgument x:TypeArguments="sd:DataTable" x:Key="in_Candidates">
+            <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="baCandidates" />
+          </InArgument>
+          <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+            <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="dbConnection" />
+          </InArgument>
         </ui:InvokeWorkflowFile.Arguments>
       </ui:InvokeWorkflowFile>
     </Sequence>
@@ -246,5 +299,6 @@
         </ActivityAction>
       </ui:ForEach.Body>
     </ui:ForEach>
+    <ui:DatabaseDisconnect DatabaseConnection="[dbConnection]" DisplayName="Disconnect" sap:VirtualizedContainerService.HintSize="421,22" sap2010:WorkflowViewState.IdRef="DatabaseDisconnect_1" />
   </Sequence>
 </Activity>
