--- a/Workflows/processNewCandidate.xaml
+++ b/Workflows/processNewCandidate.xaml
@@ -5,7 +5,7 @@
     <x:Property Name="in_Connection" Type="InArgument(ui:DatabaseConnection)" />
     <x:Property Name="in_Candidate" Type="InArgument(sd:DataRow)" />
   </x:Members>
-  <sap:VirtualizedContainerService.HintSize>1196,846</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1208,1253</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="18">
@@ -51,10 +51,11 @@
       <AssemblyReference>UiPath.Mail</AssemblyReference>
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
       <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="526,681" sap2010:WorkflowViewState.IdRef="Sequence_5">
+  <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="1218,1048" sap2010:WorkflowViewState.IdRef="Sequence_5">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="candidateId" />
       <Variable x:TypeArguments="x:Boolean" Name="inserted" />
@@ -65,68 +66,136 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertNewCandidate RPA Dev" sap:VirtualizedContainerService.HintSize="484,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="Workflows\InsertNewCandidate.xaml">
-      <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
-          <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
-        </InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_Name">
-          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;First Name&quot;).ToString + &quot; &quot;+ in_Candidate(&quot;Last Name&quot;).ToString" />
-        </InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_Email">
-          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;Email Address&quot;).ToString" />
-        </InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_PartnerId">
-          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
-        </InArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_EmployeeId">
-          <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="candidateId" />
-        </OutArgument>
-      </ui:InvokeWorkflowFile.Arguments>
-    </ui:InvokeWorkflowFile>
-    <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendHackerrankTest for RPA Dev" sap:VirtualizedContainerService.HintSize="484,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Workflows\SendHackerrankTest.xaml">
-      <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[candidateId]</InArgument>
-        <InArgument x:TypeArguments="x:Int32" x:Key="in_EmployeePosition">[in_EmployeePosition]</InArgument>
-        <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_FullName">[in_Candidate("First Name").ToString + " " + in_Candidate("Last Name").ToString]</InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_Email">[in_Candidate("Email Address").ToString]</InArgument>
-        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
-        <OutArgument x:TypeArguments="x:Boolean" x:Key="out_Inserted">[inserted]</OutArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="out_TestId">[testId]</InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_PartnerId">[in_Candidate("partnerId").ToString]</InArgument>
-      </ui:InvokeWorkflowFile.Arguments>
-    </ui:InvokeWorkflowFile>
-    <Assign sap:VirtualizedContainerService.HintSize="484,60" sap2010:WorkflowViewState.IdRef="Assign_1">
-      <Assign.To>
-        <OutArgument x:TypeArguments="x:Object">[in_Candidate("hackerrankTestId")]</OutArgument>
-      </Assign.To>
-      <Assign.Value>
-        <InArgument x:TypeArguments="x:Object">[testId]</InArgument>
-      </Assign.Value>
-    </Assign>
-    <If Condition="[inserted]" sap:VirtualizedContainerService.HintSize="484,235" sap2010:WorkflowViewState.IdRef="If_1">
+    <If Condition="[Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString )]" sap:VirtualizedContainerService.HintSize="1176,956" sap2010:WorkflowViewState.IdRef="If_2">
       <If.Then>
-        <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendCandidateBioEmail workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Workflows\SendCandidateBioEmail.xaml">
-          <ui:InvokeWorkflowFile.Arguments>
-            <InArgument x:TypeArguments="x:String" x:Key="in_Position">
-              <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_EmployeePosition.ToString" />
-            </InArgument>
-            <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-              <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
-            </InArgument>
-            <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
-              <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
-            </InArgument>
-            <InArgument x:TypeArguments="x:String" x:Key="in_Email">
-              <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;Email Address&quot;).ToString" />
-            </InArgument>
-            <InArgument x:TypeArguments="x:String" x:Key="in_Name">
-              <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;First Name&quot;).ToString + &quot; &quot; + in_Candidate(&quot;Last Name&quot;).ToString" />
-            </InArgument>
-          </ui:InvokeWorkflowFile.Arguments>
-        </ui:InvokeWorkflowFile>
+        <Sequence sap:VirtualizedContainerService.HintSize="755,808" sap2010:WorkflowViewState.IdRef="Sequence_6">
+          <sap:WorkflowViewStateService.ViewState>
+            <scg:Dictionary x:TypeArguments="x:String, x:Object">
+              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+            </scg:Dictionary>
+          </sap:WorkflowViewStateService.ViewState>
+          <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertNewCandidate RPA Dev" sap:VirtualizedContainerService.HintSize="713,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="Workflows\InsertNewCandidate.xaml">
+            <ui:InvokeWorkflowFile.Arguments>
+              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_Name">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;First Name&quot;).ToString + &quot; &quot;+ in_Candidate(&quot;Last Name&quot;).ToString" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_Email">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;Email Address&quot;).ToString" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_PartnerId">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
+              </InArgument>
+              <OutArgument x:TypeArguments="x:String" x:Key="out_EmployeeId">
+                <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="candidateId" />
+              </OutArgument>
+            </ui:InvokeWorkflowFile.Arguments>
+          </ui:InvokeWorkflowFile>
+          <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendHackerrankTest for RPA Dev" sap:VirtualizedContainerService.HintSize="713,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Workflows\SendHackerrankTest.xaml">
+            <ui:InvokeWorkflowFile.Arguments>
+              <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:Int32" x:Key="in_EmployeePosition">
+                <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="in_EmployeePosition" />
+              </InArgument>
+              <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+                <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_FullName">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;First Name&quot;).ToString + &quot; &quot; + in_Candidate(&quot;Last Name&quot;).ToString" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_Email">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;Email Address&quot;).ToString" />
+              </InArgument>
+              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+              </InArgument>
+              <OutArgument x:TypeArguments="x:Boolean" x:Key="out_Inserted">
+                <mva:VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="inserted" />
+              </OutArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="out_TestId">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="testId" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_PartnerId">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
+              </InArgument>
+              <InArgument x:TypeArguments="sd:DataRow" x:Key="in_Candidate">
+                <mva:VisualBasicValue x:TypeArguments="sd:DataRow" ExpressionText="in_Candidate" />
+              </InArgument>
+            </ui:InvokeWorkflowFile.Arguments>
+          </ui:InvokeWorkflowFile>
+          <If Condition="[inserted]" DisplayName="If inserat hackerrank test id modificam status" sap:VirtualizedContainerService.HintSize="713,235" sap2010:WorkflowViewState.IdRef="If_3">
+            <If.Then>
+              <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke UpdateEmployeeStatus workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_8" UnSafe="False" WorkflowFileName="Workflows\UpdateEmployeeStatus.xaml">
+                <ui:InvokeWorkflowFile.Arguments>
+                  <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                    <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+                  </InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Status">
+                    <Literal x:TypeArguments="x:String">3</Literal>
+                  </InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
+                    <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
+                  </InArgument>
+                </ui:InvokeWorkflowFile.Arguments>
+              </ui:InvokeWorkflowFile>
+            </If.Then>
+            <If.Else>
+              <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke UpdateEmployeeStatus workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_9" UnSafe="False" WorkflowFileName="Workflows\UpdateEmployeeStatus.xaml">
+                <ui:InvokeWorkflowFile.Arguments>
+                  <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                    <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+                  </InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Status">
+                    <Literal x:TypeArguments="x:String">2</Literal>
+                  </InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
+                    <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
+                  </InArgument>
+                </ui:InvokeWorkflowFile.Arguments>
+              </ui:InvokeWorkflowFile>
+            </If.Else>
+          </If>
+          <Assign sap:VirtualizedContainerService.HintSize="713,60" sap2010:WorkflowViewState.IdRef="Assign_1">
+            <Assign.To>
+              <OutArgument x:TypeArguments="x:Object">[in_Candidate("hackerrankTestId")]</OutArgument>
+            </Assign.To>
+            <Assign.Value>
+              <InArgument x:TypeArguments="x:Object">[testId]</InArgument>
+            </Assign.Value>
+          </Assign>
+          <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendCandidateBioEmail workflow" sap:VirtualizedContainerService.HintSize="713,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Workflows\SendCandidateBioEmail.xaml">
+            <ui:InvokeWorkflowFile.Arguments>
+              <InArgument x:TypeArguments="x:String" x:Key="in_Position">[in_EmployeePosition.ToString]</InArgument>
+              <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[candidateId]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_Email">[in_Candidate("Email Address").ToString]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_Name">[in_Candidate("First Name").ToString + " " + in_Candidate("Last Name").ToString]</InArgument>
+            </ui:InvokeWorkflowFile.Arguments>
+          </ui:InvokeWorkflowFile>
+        </Sequence>
       </If.Then>
+      <If.Else>
+        <Sequence sap:VirtualizedContainerService.HintSize="376,310" sap2010:WorkflowViewState.IdRef="Sequence_7">
+          <sap:WorkflowViewStateService.ViewState>
+            <scg:Dictionary x:TypeArguments="x:String, x:Object">
+              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+              <x:Boolean x:Key="IsPinned">False</x:Boolean>
+            </scg:Dictionary>
+          </sap:WorkflowViewStateService.ViewState>
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate email is not valid: &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
+          <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoRobotLogTable workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Workflows\InsertIntoRobotLogTable.xaml">
+            <ui:InvokeWorkflowFile.Arguments>
+              <InArgument x:TypeArguments="x:String" x:Key="in_ID">[in_Candidate("partnerId").ToString]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_RobotLog" xml:space="preserve">["The Candidate email is not valid: "+  in_Candidate("Email Address").ToString  + " Position: " + in_EmployeePosition.ToString]</InArgument>
+              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
+            </ui:InvokeWorkflowFile.Arguments>
+          </ui:InvokeWorkflowFile>
+        </Sequence>
+      </If.Else>
     </If>
   </Sequence>
 </Activity>
